<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resultat"
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:gravity="center|clip_vertical"
            android:text="0"
            android:textAlignment="center"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="207dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/b_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b_add" />

                <Button
                    android:id="@+id/b_increase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b_increase" />

                <Button
                    android:id="@+id/b_hide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b_hide" />

                <Button
                    android:id="@+id/b_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b_sub" />

                <Button
                    android:id="@+id/b_decrease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b_decrease" />

                <Button
                    android:id="@+id/b_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b_show" />

                <Button
                    android:id="@+id/b_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b_color" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>